--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -24,24 +24,24 @@
     <section class="py-5">
         <div class="container px-4 px-lg-5 mt-5">
             <div class="row gx-4 gx-lg-5 row-cols-2 row-cols-md-3 row-cols-xl-4 justify-content-center">
-                <div class="col mb-5">
+                <div class="col mb-5" *ngFor="let product of allProducts">
                     <div class="card h-100">
                         <!-- Product image-->
-                        <img class="card-img-top" src="https://dummyimage.com/450x300/dee2e6/6c757d.jpg" alt="..." />
+                        <img style="height: 250px; padding: 5px;" routerLink="view/{{product.id}}" class="card-img-top" [src]="product.image" alt="..." />
                         <!-- Product details-->
                         <div class="card-body p-4">
                             <div class="text-center">
                                 <!-- Product name-->
-                                <h5 class="fw-bolder">Fancy Product</h5>
+                                <h5 class="fw-bolder">{{product.title.slice(0,20)}}...</h5>
                                 <!-- Product price-->
-                                $40.00 - $80.00
+                                ${{product.price}}
                             </div>
                         </div>
                         <!-- Product actions-->
                         <div class="card-footer p-4 pt-0 border-top-0 bg-transparent">
                             <div class="text-center">
-                               <button class="btn"><i style="height: 40px;" class="fa-solid fa-heart"></i></button>
-                               <button class="btn"><i style="height: 40px;" class="fa-solid fa-cart-plus"></i></button>
+                               <button (click)="addtoWishlist(product)" class="btn"><i style="height: 0px;color: red;" class="fa-solid fa-heart fa-xl"></i></button>
+                               <button style="background-color: antiquewhite; border-radius: 2px solid; border: 2px solid;" (click)="addtocart(product)" class="btn"><i style="height: 0px; color: green;" class="fa-solid fa-cart-plus fa-xl"></i></button>
                             </div>
                         </div>
                     </div>
