--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -32,8 +32,8 @@
         <i class="fa-brands fa-facebook"></i>
         <i class="fa-brands fa-twitter"></i>
         <i class="fa-brands fa-instagram"></i>
-        <i class="fa-brands fa-envelope"></i>
-        <i class="fa-brands fa-watsapp"></i>
+        <i class="fa-solid fa-envelope"></i>
+        <i class="fa-brands fa-whatsapp"></i>
         <i class="fa-brands fa-github"></i>
       </div>
     </div>
