--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
             </a>
           </li>
           <li class="nav-item active">
-            <a class="nav-link" routerLink="user/wishlist">
+            <a class="nav-link" routerLink="user/cart">
                 <button class="btn btn-outline-dark">  <i class="fa-solid fa-cart-plus text-success me-1"></i> Cart <span class="badge bg-dark text-light">0</span></button> 
             </a>
           </li>
