--- a/src/app/all-products/all-products.component.html
+++ b/src/app/all-products/all-products.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 90px;">
     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
