--- a/src/app/cart/cart.component.html
+++ b/src/app/cart/cart.component.html
@@ -1,3 +1,4 @@
+<app-header></app-header>
 <div style="margin-top: 100px;">
     <div class="empty-wishlist mt-5 mb-5 d-flex justify-content-center align-items-center flex-column">
         <img src="https://cdni.iconscout.com/illustration/premium/thumb/empty-cart-2130356-1800917.png" alt="">
